# my_page_backend

./: .env  Makefile  README.md  alembic.ini  pyproject.toml  todo.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
alembic/: env.py
alembic/versions/: 11abdf9f3b01_new_table_user.py  237e5a7d9e9d_create_goals_table.py  2aaed9f8e6fe_create_goals_table.py  2c336783489a_added_todo_weaks_and_dates.py  35d13e5848f7_create_goals_table.py  cbc51572042b_.py  df97648f328d_added_todo_notodo.py  f2662f23f7eb_.py
src/goals/controller/: __init__.py  create_goal_controller.py  delete_goals_controller.py  get_by_user_goals_controller.py  search_goals_controller.py  update_goals_controller.py
src/goals/factory/: __init__.py  create_goal_factory.py  delete_goals_factory.py  get_by_user_goals_factory.py  search_goals_factory.py  update_goals_factory.py
src/goals/infra/: __init__.py  goals.py
src/goals/model/: __init__.py  goals.py
src/goals/schema/: __init__.py  goals.py
src/goals/service/: __init__.py  create_goal_service.py  delete_goals_service.py  get_by_user_goals_service.py  search_goals_service.py  update_goals_service.py
src/main/: exceptions.py  factory.py  main.py  settings.py
src/main/routers_factory/: __init__.py  goals_router_factory.py  routers_factory.py  user_router_factory.py
src/shared/: database_shared.py
src/user/controller/: __init__.py  create_user_controller.py
src/user/factory/: __init__.py  create_user_factory.py
src/user/infra/: user.py
src/user/model/: user.py
src/user/schema/: __init__.py  (+1 more)
utils/: make_route.py
(+1 files in other folders)
