[tool.poetry]
name = "workspace"
version = "0.1.0"
description = ""
authors = ["Victor Akihito Kamada Tomita <40372914+Vakihito@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "3.0.3"
sqlalchemy = "2.0.30"
alembic = "1.13.1"
requests = "2.32.1"
black = "24.4.2"
sqlalchemy-utils = "0.41.2"
python-dotenv = "1.0.1"
uvicorn = "0.29.0"
pytest = "8.2.1"
fastapi = "0.111.0"
pydantic = "2.7.1"
loguru = "0.7.2"
pydantic-settings = "2.2.1"
psycopg2 = "^2.9.3"
starlette = "0.37.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"